# expectation

./: Cargo.toml  Cargo.toml.orig
cargo-expect/: Cargo.toml  Cargo.toml.orig
cargo-expect/src/: command.rs  main.rs  output.rs  promote.rs
expectation/: Cargo.toml
expectation-shared/: Cargo.toml  Cargo.toml.orig
expectation-shared/src/: filesystem.rs  lib.rs
expectation/expectation_plugin/: Cargo.toml  Cargo.toml.orig
expectation/expectation_plugin/src/: lib.rs
expectation/src/: provider.rs  test.rs
expectation/src/extensions/: image.rs
expectation_plugin/: Cargo.toml
src/: ipc.rs  lib.rs  provider.rs
src/extensions/: image.rs  mod.rs  text.rs
