[package]
name = "cargo-expect"
version = "0.1.1"
authors = ["Ty Overby <ty@pre-alpha.com>"]
description = "Expectation Tests Runner"
license = "MIT/Apache-2.0"
edition = "2024"

[dependencies]
colored = "1.6"
crossbeam = "0.4"
serde = "1"
serde_json = "1"
structopt = "0.2"

[dependencies.expectation-shared]
path = "../expectation-shared"
