[package]
name = "expectation"
version = "0.1.1"
authors = ["Ty Overby <ty@pre-alpha.com>"]
description = "Expectation Tests"
license = "MIT/Apache-2.0"
edition = "2024"

[features]
default = ["text", "image"]
text = ["diff"]

[dependencies]
serde = "1"
serde_json = "1"

[dependencies.diff]
version = "0.1"
optional = true

[dependencies.image]
version = "0.24"
optional = true

[dependencies.expectation-shared]
path = "../expectation-shared"
