[package]
name = "expectation_plugin"
version = "0.1.2"
authors = ["Ty Overby <ty@pre-alpha.com>"]
description = "Expectation Tests Plugin"
license = "MIT/Apache-2.0"
edition = "2024"

[lib]
name = "expectation_plugin"
path = "src/lib.rs"
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"
